tests/ui/transmute/ambiguity-in-closure-arg.stderr
error[E0282]: type annotations needed
  --> $DIR/ambiguity-in-closure-arg.rs:6:44
   |
LL |     unsafe { std::mem::transmute::<_, ()>(|o_b: Unconstrained<_>| {}) };
   |                                            ^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
